--- a/index.html
+++ b/index.html
@@ -16,6 +16,33 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <div class="navigation">
+      <input type="checkbox" id="nav-toggle" class="navigation__checkbox" />
+      <label for="nav-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>01</span>About Natours</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>02</span>Your Benifits</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>03</span>Popular tours</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>04</span>Stories</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>05</span>Book Now</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <header class="header">
       <div class="header__logo-box">
         <img src="./img/logo-white.png" alt="logo" class="header__logo" />
@@ -355,17 +382,35 @@
         <div class="col-1-of-2">
           <div class="footer__navigation">
             <ul class="footer__list">
-              <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
-              <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
-              <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
-              <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
-              <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy Policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
             </ul>
           </div>
         </div>
         <div class="col-1-of-2">
           <p class="footer__copyright">
-            Built by <a href="https://linkedin.com/in/bechandrakant" class="footer__link">Chandrakant</a> as part of learning from advanced CSS course by Jonas Schemedtmann. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum nihil nesciunt illo expedita vero fugit est. Deserunt natus eum voluptate nisi quisquam quia, delectus, praesentium hic veritatis corrupti excepturi voluptates.
+            Built by
+            <a href="https://linkedin.com/in/bechandrakant" class="footer__link"
+              >Chandrakant</a
+            >
+            as part of learning from advanced CSS course by Jonas Schemedtmann.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum
+            nihil nesciunt illo expedita vero fugit est. Deserunt natus eum
+            voluptate nisi quisquam quia, delectus, praesentium hic veritatis
+            corrupti excepturi voluptates.
           </p>
         </div>
       </div>
