--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>01</span>About Natours</a>
+            <a href="#" class="navigation__link"
+              ><span>01</span>About Natours</a
+            >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>02</span>Your Benifits</a>
+            <a href="#" class="navigation__link"
+              ><span>02</span>Your Benifits</a
+            >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>03</span>Popular tours</a>
+            <a href="#" class="navigation__link"
+              ><span>03</span>Popular tours</a
+            >
           </li>
           <li class="navigation__item">
             <a href="#" class="navigation__link"><span>04</span>Stories</a>
@@ -156,7 +162,7 @@
           </div>
         </div>
       </section>
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h3 class="heading-secondary">Most Popular Tours</h3>
         </div>
@@ -186,7 +192,7 @@
                     <div class="card__price-only">Only</div>
                     <div class="card__price-value">$297</div>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now!</a>
+                  <a href="#popup" class="btn btn--white">Book Now!</a>
                 </div>
               </div>
             </div>
@@ -216,7 +222,7 @@
                     <div class="card__price-only">Only</div>
                     <div class="card__price-value">$497</div>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now!</a>
+                  <a href="#popup" class="btn btn--white">Book Now!</a>
                 </div>
               </div>
             </div>
@@ -246,7 +252,7 @@
                     <div class="card__price-only">Only</div>
                     <div class="card__price-value">$897</div>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now!</a>
+                  <a href="#popup" class="btn btn--white">Book Now!</a>
                 </div>
               </div>
             </div>
@@ -415,6 +421,44 @@
         </div>
       </div>
     </footer>
+
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" /><img
+            src="img/nat-9.jpg"
+            alt="Tour photo"
+            class="popup__img"
+          />
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            obcaecati quasi, adipisci, quod ipsam ipsum fuga vero accusamus non
+            animi beatae dolore! Doloremque animi at impedit excepturi
+            voluptatem accusamus cum! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Veritatis obcaecati quasi, adipisci, quod ipsam
+            ipsum fuga vero accusamus non animi beatae dolore! Doloremque animi
+            at impedit excepturi voluptatem accusamus cum! Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Veritatis obcaecati quasi,
+            adipisci, quod ipsam ipsum fuga vero accusamus non animi beatae
+            dolore! Doloremque animi at impedit excepturi voluptatem accusamus
+            cum! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Veritatis obcaecati quasi, adipisci, quod ipsam ipsum fuga vero
+            accusamus non animi beatae dolore! Doloremque animi at impedit
+            excepturi voluptatem accusamus cum!
+          </p>
+          <a href="#" class="btn btn--green">Book Now</a>
+        </div>
+      </div>
+    </div>
     <!-- <section>
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
